public/skin/frontend/base/default/css/checkout.css
/* ... */
.opc .section.allow .step-title:hover h2,
.opc .section.active .step-title h2 {
    color: var(--maho-color-primary);
}

.opc .section .step-title h2 {
    font-size: 1rem;
    font-weight: 400;
    line-height: 40px;
    height: 40px;
    float: left;
    margin: 0;
}

.opc .section .step {
    padding-block: 20px;
}
.opc .section .step:after {
    content: '';
    display: table;
    clear: both;
}
@media only screen and (max-width: 979px) {
    .opc .section .step {
        padding: 10px;
    }
}

.opc select {
    max-width: 365px;
    width: 100%;
}

.opc h3 {
    font-weight: 500;
}

.opc .buttons-set {
    text-align: left;
}
.opc .buttons-set button.button {
    float: left;
    margin-left: 0;
    margin-right: 10px;
    margin-bottom: 0;
}
.opc .buttons-set p.required {
    float: right;
    margin-left: 5px;
    margin-bottom: 0;
}
.opc .buttons-set .back-link {
    float: right;
    margin: 0;
}
.opc .buttons-set a {
    line-height: 20px;
    display: inline-block;
    padding: 5px 5px 5px 0;
}

@media only screen and (max-width: 479px) {
    .opc .buttons-set .button + .buttons-set .button,
    .paypal-express-review .buttons-set .button + .buttons-set .button {
        margin-left: 0;
    }
}
#opc-payment .note {
    padding: 10px;
}

/* -------------------------------------------- *
 * Shipping and Payment methods
 */
.sp-methods {
    margin: 0 0 8px;
}
.sp-methods dt {
    margin: 13px 0 5px;
    font-weight: bold;
}
.sp-methods dt:first-child {
    margin: 0 0 5px;
}
.sp-methods dd li {
    margin: 5px 0;
}
.sp-methods label img {
    float: left;
}
.sp-methods label a {
    margin-top: 6px;
    float: right;
    margin-left: 10px;
}
.sp-methods .price {
    font-weight: bold;
}
.sp-methods .form-list {
    padding-left: 20px;
}
.sp-methods .form-list li {
    margin: 0 0 8px;
}
.sp-methods select.month {
    width: 120px;
    margin-right: 10px;
}
.sp-methods select.year {
    width: 96px;
}
.sp-methods input.cvv {
    width: 4em !important;
}
.sp-methods #advice-validate-cc-exp-ccsave_expiration {
    max-width: 130px;
}
.sp-methods .checkmo-list li {
    margin: 0 0 5px;
    content: '';
    display: table;
    clear: both;
}
.sp-methods .checkmo-list label {
    width: 165px;
    padding-right: 15px;
    text-align: right;
    float: left;
}
.sp-methods .checkmo-list address {
    float: left;
}
@media only screen and (max-width: 479px) {
    .sp-methods .checkmo-list {
        padding-left: 0;
    }
    .sp-methods .checkmo-list label {
        width: 135px;
    }
}
.sp-methods .release-amounts {
    margin: 0.5em 0;
}
.sp-methods .release-amounts button {
    float: left;
    margin: 5px 10px 0 0;
}

/* One Page Checkout */
.block-progress {
    border: 0;
    margin: 0;
    border-left: 1px solid var(--maho-color-border);
    padding-left: 20px;
}
.block-progress .block-content {
    font-size: 0.813rem;
}
.block-progress dt {
    padding-top: 6px;
    margin: 0;
    margin-bottom: 10px;
    color: var(--maho-color-text-primary);
    font-size: 0.875rem;
    font-weight: bold;
    font-style: normal;
    line-height: 1.4;
    text-rendering: optimizeSpeed;
    text-transform: uppercase;
    margin-bottom: 6px;
    text-transform: uppercase;
    font-weight: normal;
    color: var(--maho-color-text-secondary);
}
.block-progress dt.complete {
    color: var(--maho-color-text-primary);
}
.block-progress dd {
    padding-left: 15px;
    margin-bottom: 10px;
    font-style: italic;
}
.block-progress dd address {
    font-style: italic;
}
.block-progress #payment-progress-opcheckout .subtitle {
    margin-bottom: 3px;
}
.block-progress .payment-info dt {
    padding: 0;
    margin: 0 0 3px 0;
    color: var(--maho-color-text-primary);
    text-transform: none;
    font-style: italic;
    float: left;
    clear: both;
    font-size: 0.813rem;
}
.block-progress .payment-info dt:after {
    content: ': ';
}
.block-progress .payment-info dd {
    float: left;
    margin-bottom: 3px;
    font-size: 0.813rem;
}
.block-progress .payment-info:after {
    content: '';
    display: table;
    clear: both;
}

/* review step */
#checkout-review-table .btn-remove img {
    display: none;
}

#checkout-review-table td.a-right {
    white-space: nowrap;
}

#review-buttons-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    gap: 15px;
    margin-top: 15px;
    margin-bottom: 15px;

    .btn-checkout {
        order: 1;
        min-width: 220px;
    }
    .please-wait {
        order: 1;
        margin-right: 10px;
    }
    .continue-shopping {
        @media (max-width: 599px) {
            display: none;
        }
    }
}

@media only screen and (max-width: 599px) {
    .linearize-table-large.checkout-review-table thead tr:nth-child(1n+2) {
        display: none;
    }
}
@media only screen and (max-width: 479px) {
    .linearize-table.checkout-review-table thead tr:nth-child(1n+2) {
        display: none;
    }
}
/* show/hide "change" link for progress step depend on complete status
 * should be placed in .css file */
.opc-block-progress dt.complete a,
.opc-block-progress dt.complete .separator {
    display: inline;
}

.opc-block-progress dt a,
.opc-block-progress dt .separator {
    display: none;
}

/* On small screens, the progress review content will be moved to the review step via JS. Styled via this CSS: */
#checkout-step-review .opc-block-progress {
    border-left: none;
    padding-left: 0;
}
#checkout-step-review .opc-block-progress .block-title {
    display: none;
}
#checkout-step-review .opc-block-progress .block-content {
    display: block !important;
    padding: 0;
}
#checkout-step-review .opc-block-progress .block-content > dl > div {
    float: left;
    width: 50%;
}
@media only screen and (max-width: 479px) {
    #checkout-step-review .opc-block-progress .block-content > dl > div {
        float: none;
        width: auto;
    }
}
/* ... */

